# fast-sugiyama

./: .gitattributes  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: python_ci.yml  python_release.yml  rust_ci.yml
crates/py-sugiyama/: Cargo.toml  README.md  pyproject.toml
crates/py-sugiyama/.cargo/: config.toml
crates/py-sugiyama/fast_sugiyama/: _types.py  layout.py  lib.py
crates/py-sugiyama/src/: lib.rs
crates/py-sugiyama/tests/: conftest.py  test_from_edges.py  test_layouts.py  test_output.py
crates/rust-sugiyama/: Cargo.toml  README.md
crates/rust-sugiyama/benches/: layout.rs
crates/rust-sugiyama/examples/: from_graph.rs  write.rs
crates/rust-sugiyama/src/: configure.rs  lib.rs
crates/rust-sugiyama/src/algorithm/: mod.rs
crates/rust-sugiyama/src/algorithm/p0_cycle_removal/: mod.rs
crates/rust-sugiyama/src/algorithm/p1_layering/: cut_values.rs  low_lim.rs  mod.rs  ranking.rs  tests.rs
crates/rust-sugiyama/src/algorithm/p2_reduce_crossings/: mod.rs  tests.rs
crates/rust-sugiyama/src/algorithm/p3_calculate_coordinates/: mod.rs  tests.rs
crates/rust-sugiyama/src/util/: mod.rs
crates/rust-sugiyama/src/util/graph_generator/: layered.rs  mod.rs
