[workspace]
members = ["crates/*"]
default-members = ["crates/rust-sugiyama"]
resolver = "3"


[workspace.package]
version = "0.5.4"
edition = "2024"
authors = ["Austin Orr <austinmartinorr@gmail.com>"]
license = "MIT"
readme = "README.md"


[workspace.dependencies]
rust-sugiyama = { path = "crates/rust-sugiyama" }

log = "0.4"
petgraph = { version = "0.8", default-features = false, features = [
    "stable_graph",
] }
rand = { version = "0.9", default-features = false, features = ["std_rng"] }
svg = "0.18"
pyo3 = { version = "0.28", features = ["abi3-py311", "extension-module"] }
pyo3-log = "0.13"


[profile.release-lto]
inherits = "release"
debug = false
codegen-units = 1
lto = true
strip = true
panic = "abort"
