[package]
name = "rust-sugiyama"
version = { workspace = true }
edition = "2024"
license = "MIT"
authors = ["paddison"]

description = "Implementation of Sugiyama's algorithm to calculate coordinates of a directed graph"
readme = "README.md"

homepage = "https://github.com/paddison/rust-sugiyama"
repository = "https://github.com/paddison/rust-sugiyama"

keywords = ["graph", "graph-display", "directed-graph"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
petgraph = "0.8.1"

[dev-dependencies]
graph_generator = { workspace = true }
svg = { workspace = true }
env_logger = "*"
